--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -66,9 +66,9 @@ TP02                        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \
 TAP03                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 TP04                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 MP05                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
-NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+NS $\Ronerho$ 2-site        & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
+NS $\Ronerho$ 3-site linear & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+NS $\Ronerho$ 3-site        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 
 \midrule
 \vspace{-5pt} \\
