--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1490,7 +1490,7 @@ Some of the missing models include:
 \begin{description}
 \item[`TP04':]\index{relaxation dispersion!TP04 model}  The $\Ronerho$-type data \citet{TrottPalmer04} N-site analytic equation for all time scales with parameters $\{\Ronerhoprime, \dots, \pone, \dots, \pN, \aveomega, \konetwo, \dots\, \koneN\}$.
 \item[`NS $\Ronerho$ 3-site linear':]\index{relaxation dispersion!NS R1rho 3-site linear model}  The model of the numeric solution for linear 3-site exchange for $\Ronerho$-type data.
-\item[`NS $\Ronerho$ 3-site branched':]\index{relaxation dispersion!NS R1rho 3-site branched model}  Similar to the `NS $\Ronerho$ 3-site linear' model but with one of the $\kex$ parameters not set to zero.
+\item[`NS $\Ronerho$ 3-site':]\index{relaxation dispersion!NS R1rho 3-site model}  Similar to the `NS $\Ronerho$ 3-site linear' model but with one of the $\kex$ parameters not set to zero.
 \end{description}
 
 Information for how these can be added is given in the next section.
