--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -44,10 +44,9 @@ For a two state exchange jumping between states A and B, the equation is:
     \right] .
 \end{equation}
 
-The solution to this equation then Fourier transformed to produce the NMR spectrum.  However the analytic or closed-form frequency-domain solution remains intractable.
-
+The analytic or closed-form frequency-domain solution for this equation however remains intractable.
 Solutions can nevertheless be found by either making assumptions or restrictions about the exchange process and then analytically solving~\ref{eq: Bloch-McConnell} or by finding numeric solutions.
-The modelling of relaxation dispersion data can hence be catergorised into these two distinct methodologies:
+The modelling of relaxation dispersion data can hence be categorised into these two distinct methodologies:
 
 \begin{description}
 \item[Analytical models:]\index{relaxation dispersion!Analytical model}  Optimisation of models based on analytical, closed-form expressions derived from the Bloch-McConnell equations subject to certain conditions (see Section~\ref{sect: dispersion: analytic CPMG models} on page~\pageref{sect: dispersion: analytic CPMG models} and Section~\ref{sect: dispersion: analytic R1rho models} on page~\pageref{sect: dispersion: analytic R1rho models}).
