Complete reworking of the 'NS R1rho 2-site' dispersion model.
The original code of Nikolai Skrynnikov and Martin Tollinger has been modified to match the
behaviour of Dmitry Korzhnev's cpmg_fit software.  The equations from Korzhnev et al., JACS 2005
(http://dx.doi.org/10.1021/ja0446855) have been used for the initial magnetisation and the R1rho'
calculation.  All equations have been added to the manual to clarify the model.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -3868,7 +3868,81 @@
   year           = 2004
 }
 
-@Article{Korzhnev05,
+@Article{Korzhnev05a,
+  Author         = {Korzhnev, D. M. and Orekhov, V. Y. and Kay, L. E.},
+  Title          = {Off-resonance {R}(1rho) {NMR} studies of exchange
+                   dynamics in proteins with low spin-lock fields: an
+                   application to a {F}yn {SH}3 domain.},
+  Journal        = jacs,
+  Volume         = {127},
+  Number         = {2},
+  Pages          = {713-721},
+  abstract       = {An (15)N NMR R(1rho) relaxation experiment is
+                   presented for the measurement of millisecond time scale
+                   exchange processes in proteins. On- and off-resonance
+                   R(1rho) relaxation profiles are recorded one residue at
+                   a time using a series of one-dimensional experiments in
+                   concert with selective Hartmann-Hahn polarization
+                   transfers. The experiment can be performed using low
+                   spin-lock field strengths (values as low as 25 Hz have
+                   been tested), with excellent alignment of magnetization
+                   along the effective field achieved. Additionally,
+                   suppression of the effects of cross-correlated
+                   relaxation between dipolar and chemical shift
+                   anisotropy interactions and (1)H-(15)N scalar coupled
+                   evolution is straightforward to implement, independent
+                   of the strength of the (15)N spin-locking field. The
+                   methodology is applied to study the folding of a G48M
+                   mutant of the Fyn SH3 domain that has been
+                   characterized previously by CPMG dispersion
+                   experiments. It is demonstrated through experiment that
+                   off-resonance R(1rho) data measured at a single
+                   magnetic field and one or more spin-lock field
+                   strengths, with amplitudes on the order of the rate of
+                   exchange, allow a complete characterization of a
+                   two-site exchange process. This is possible even in the
+                   case of slow exchange on the NMR time scale, where
+                   complementary approaches involving CPMG-based
+                   experiments fail. Advantages of this methodology in
+                   relation to other approaches are described.},
+  authoraddress  = {Protein Engineering Network Centers of Excellence and
+                   Department of Medical Genetics, The University of
+                   Toronto, Toronto, Ontario, Canada M5S 1A8.},
+  keywords       = {Nitrogen Isotopes ; Nuclear Magnetic Resonance,
+                   Biomolecular/*methods ; Protein Folding ;
+                   Proto-Oncogene Proteins/*chemistry ; Proto-Oncogene
+                   Proteins c-fyn ; src Homology Domains ; src-Family
+                   Kinases/*chemistry},
+  language       = {eng},
+  medline-aid    = {10.1021/ja0446855 [doi]},
+  medline-crdt   = {2005/01/13 09:00},
+  medline-da     = {20050112},
+  medline-dcom   = {20050303},
+  medline-edat   = {2005/01/13 09:00},
+  medline-fau    = {Korzhnev, Dmitry M ; Orekhov, Vladislav Yu ; Kay,
+                   Lewis E},
+  medline-is     = {0002-7863 (Print) ; 0002-7863 (Linking)},
+  medline-jid    = {7503056},
+  medline-jt     = {Journal of the American Chemical Society},
+  medline-lr     = {20091119},
+  medline-mhda   = {2005/03/04 09:00},
+  medline-own    = {NLM},
+  medline-pl     = {United States},
+  medline-pmid   = {15643897},
+  medline-pst    = {ppublish},
+  medline-pt     = {Journal Article ; Research Support, Non-U.S. Gov't},
+  medline-rn     = {0 (Nitrogen Isotopes) ; 0 (Proto-Oncogene Proteins) ;
+                   EC 2.7.10.2 (Proto-Oncogene Proteins c-fyn) ; EC
+                   2.7.10.2 (src-Family Kinases)},
+  medline-sb     = {IM},
+  medline-so     = {J Am Chem Soc. 2005 Jan 19;127(2):713-21.},
+  medline-stat   = {MEDLINE},
+  url            = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?cmd=prlinks&dbfrom=pubmed&retmode=ref&id=15643897},
+  doi            = {10.1021/ja0446855},
+  year           = 2005
+}
+
+@Article{Korzhnev05b,
   Author         = {Korzhnev, D. M. and Neudecker, P. and Mittermaier, A.
                    and Orekhov, V. Y. and Kay, L. E.},
   Title          = {Multiple-site exchange in proteins studied with a
