--- a/docs/latex/dispersion_models.tex
+++ b/docs/latex/dispersion_models.tex
@@ -55,10 +55,10 @@ MMQ CPMG-type \\
 \cline{1-1}
 \\[-5pt]
 MMQ CR72                 & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$        & $\pA > \pB$                       & \citet{Korzhnev04a} \\
-NS MMQ 2-site            & Numeric  & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$        & $\pA > \pB$                       & \citet{Korzhnev05} \\
-NS MMQ 3-site linear     & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwBC,$       & $\pA > \pB$ and $\pB > \pC$       & \citet{Korzhnev05} \\
+NS MMQ 2-site            & Numeric  & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$        & $\pA > \pB$                       & \citet{Korzhnev05b} \\
+NS MMQ 3-site linear     & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwBC,$       & $\pA > \pB$ and $\pB > \pC$       & \citet{Korzhnev05b} \\
                          &          &       & $\dwHAB, \dwHBC, \kexAB, \kexBC\}$ \\
-NS MMQ 3-site            & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwBC,$       & $\pA > \pB$ and $\pB > \pC$       & \citet{Korzhnev05} \\
+NS MMQ 3-site            & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwBC,$       & $\pA > \pB$ and $\pB > \pC$       & \citet{Korzhnev05b} \\
                          &          &       & $\dwHAB, \dwHBC, \kexAB, \kexBC, \kexAC\}$ \\
 
 % R1rho-type models.
