Removed the 'CR72' model for cpmg_fit from the dispersion software comparison table.
This is for the dispersion chapter of the user manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -44,7 +44,7 @@ Single quantum (SQ) CPMG-type \\
 \cmidrule(lr){1-1}
 LM63                        & \yes & \no  & \no  & \yes & \no  & \yes & \yes & \no  & \yes \\
 LM63 3-site                 & \yes & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \yes \\
-CR72                        & \yes & \yes & \no  & \yes & \yes & \yes & \yes & \no  & \yes \\
+CR72                        & \yes & \no  & \no  & \yes & \yes & \yes & \yes & \no  & \yes \\
 IT99                        & \yes & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
 TSMFK01                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 NS 2-site                   & \no  & \yes & \yes & \no  & \no  & \yes & ?    & \no  & \yes \\
