Updated the ShereKhan error estimation technique in the dispersion software comparison table.
This is for the dispersion chapter of the user manual.  Adam Mazur communicated that errors are
estimated using the covariance matrix in a private mail.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -111,10 +111,9 @@ Visualisation of the chi-squared space          & \no  & \no  & \no  & \no  & \y
 \vspace{-5pt} \\
 \textbf{Error propagation} \\
 \cmidrule(lr){1-1}
-Covariance matrix (lowest quality)              & \yes & \yes & \yes & \no  & \yes & \no  & \yes & \no  & \no  \\
+Covariance matrix (lowest quality)              & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  & \no  \\
 Jackknife simulations (for missing errors)      & \yes & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
 Bootstrapping simulations (false errors)        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-Currently unknown (please update)               & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  \\
 Monte Carlo simulations (gold standard)         & \yes & \no  & \no  & \yes & \yes & \no  & \yes & \yes & \yes \\
 
 \vspace{-5pt} \\
